# Toolbox

./: .gitignore  .toolbox_config.json  README.md  bootstrap_install.sh  install.sh  pyproject.toml
scripts/: install_ffmpeg_macos.sh
src/toolbox/: __main__.py  app.py  registry.py  styles.tcss
src/toolbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/toolbox/tools/: __init__.py  audio_converter.py  audio_distance.py  base.py  max_gain.py  network_info.py  osc_tool.py  settings.py  stereo_merger.py  tcp_tool.py  youtube_downloader.py
